Fix theme switcher icon on mobile Safari

--- a/src/components/ThemeSwitcher/styles.module.css
+++ b/src/components/ThemeSwitcher/styles.module.css
@@ -1,5 +1,7 @@
 .button {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   appearance: none;
   background: none;
   border: none;
@@ -7,18 +9,28 @@
   bottom: -3px;
 }
 
-[data-theme='dark'] .button {
-  bottom: -2px;
-}
-
 .button:focus-visible,
 .button:hover {
   color: var(--color-primary);
 }
 
+.icons {
+  position: relative;
+  height: 24px;
+  width: 24px;
+}
+
+.icons svg {
+  height: 100%;
+  width: 100%;
+}
+
 .moon {
+  position: absolute;
+  top: 0;
+  left: 0;
   opacity: 0;
-  transform: translateY(-24px);
+  transform: translateY(-16px);
   transition: all 0.15s ease;
 }
 
@@ -35,5 +47,5 @@
 
 [data-theme='dark'] .sun {
   opacity: 0;
-  transform: translateY(24px);
+  transform: translateY(16px);
 }
